页面修改，新增了顶部

--- a/src/webapp/brand.html
+++ b/src/webapp/brand.html
@@ -86,7 +86,7 @@
 
     <!--表格-->
     <!--看上去好像有两个被弃用了，实际上他们俩是取消滚轮的唯一功臣-->
-    <iframe src="page/user.html"
+    <iframe :src="iframeUrl"
             width="100%"
             height="auto"
             frameborder="0"
@@ -110,13 +110,13 @@
                     text-color="#fff"
             >
 
-                <el-menu-item index="1">
+                <el-menu-item index="1" onclick="change_page('user')">
                     <i class="el-icon-s-custom"></i>
-                    <span slot="title" onclick="gaiyixia('tb_brand_copy1')">人员管理</span>
+                    <span slot="title" onclick="change_page('user')">人员管理</span>
                 </el-menu-item>
-                <el-menu-item index="2">
+                <el-menu-item index="2" onclick="change_page('record')">
                     <i class="el-icon-s-data"></i>
-                    <span slot="title" onclick="gaiyixia('tb_brand_copy2')">红包记录</span>
+                    <span slot="title" onclick="change_page('record')">红包记录</span>
                 </el-menu-item>
 <!--                <el-menu-item index="3">-->
 <!--                    <i class="el-icon-menu"></i>-->
@@ -134,19 +134,12 @@
 </div>
 
 <script>
-    var shiyixiashuzi = 'tb_brand';
 
-    function gaiyixia(val){
-        shiyixiashuzi = val;
-        //无法在axios使用this，所以在axios外定义了一个
-        var _this = this;
-        // console.log("aabb"+_this.brand.tablename);
-        //页面加载完后发送异步请求，获取数据
-        axios({
-            method:"post",
-            url:"http://localhost:8081/brand-case/tableChange",
-            data:shiyixiashuzi
-        })
+    function change_page(item) {
+        switch (item) {
+            case 'user':app.iframeUrl = 'page/user.html';break;
+            case 'record':app.iframeUrl = 'page/redpack_record.html';break;
+        }
     }
 
     new Vue({
@@ -157,32 +150,6 @@
         el:"#app2",
 
         methods:{
-            // tableChange(name){
-            //     const _this = this;
-            //     switch (name) {
-            //         default :_this.brand.tablename = "tb_brand";Utils.$emit('demo');break;
-            //         case 'tb_brand':_this.brand.tablename = "tb_brand";Utils.$emit('demo');break;
-            //         case 'tb_brandsec':_this.brand.tablename = "tb_brandsec";Utils.$emit('demo');break;
-            //     }
-            // },
-
-            // selectALL() {
-            //     //无法在axios使用this，所以在axios外定义了一个
-            //     var _this = this;
-            //     num = 1;
-            //     // console.log("aabb"+_this.brand.tablename);
-            //     //页面加载完后发送异步请求，获取数据
-            //     axios({
-            //         method:"post",
-            //         url:"http://localhost:8081/brand-case/selectByPageAndCondition?currentPage="+this.currentPage+"&pageSize="+this.pageSize,
-            //         data:_this.brand
-            //     }).then(resp =>{
-            //         //设置表格数据
-            //         _this.tableData = resp.data.rows; // {rows:[],totalCount:100}
-            //         //设置总记录数
-            //         _this.totalCount = resp.data.totalCount;
-            //     })
-            // },
 
             handleOpen(key, keyPath) {
                 console.log(key, keyPath);
@@ -220,62 +187,18 @@
             };
         }
     })
-</script>
 
-
-
-<script>
-
-
-
-    new Vue({
+    var app = new Vue({
 
         el: "#app",
 
         mounted(){
 
-            // let that = this;
-            // Utils.$on('demo', function () {
-            //     // console.log(msg);
-            //     that.selectALL(); //这里就是调用你的方法
-            // })
-
             this.selectALL();
 
-            // //无法在axios使用this，所以在axios外定义了一个
-            // var _this = this;
-            //
-            // //页面加载完后发送异步请求，获取数据
-            // axios({
-            //     method:"get",
-            //     url:"http://localhost:8081/brand-case/selectAllServlet"
-            // }).then(function (response) {
-            //     _this.tableData = response.data;
-            // })
         },
 
-
-
         methods: {
-
-            // tableChange(name){
-            //     const _this = this;
-            //     axios({
-            //         method:"post",
-            //         url:"http://localhost:8081/brand-case/tableChange",
-            //         data:_this.brand
-            //     }).then(function (resp) {
-            //         if(resp.data == "success"){
-            //             // 重新查询数据
-            //             _this.selectALL();
-            //             // 弹出消息提示
-            //             _this.$message({
-            //                 message: '切换成功',
-            //                 type: 'success'
-            //             });
-            //         }
-            //     })
-            // },
 
             selectALL() {
                 //无法在axios使用this，所以在axios外定义了一个
@@ -295,23 +218,6 @@
 
                 })
             },
-
-            // selectALLSec() {
-            //     //无法在axios使用this，所以在axios外定义了一个
-            //     var _this = this;
-            //     num = 2;
-            //     //页面加载完后发送异步请求，获取数据
-            //     axios({
-            //         method:"get",
-            //         url:"http://localhost:8081/brand-case/brand/selectAllSec",
-            //         data:_this.brandSec
-            //     }).then(resp =>{
-            //         //设置表格数据
-            //         _this.tableData = resp.data.rowsSec; // {rows:[],totalCount:100}
-            //         //设置总记录数
-            //         _this.totalCount = resp.data.totalCountSec;
-            //     })
-            // },
 
             tableRowClassName({row, rowIndex}) {
                 if (rowIndex === 1) {
@@ -543,6 +449,13 @@
                     ordered2:"",
                     description:""
                 },
+
+                iframePage:{
+                    user:'page/user.html',
+                    record:'page/redpack_record.html',
+                },
+
+                iframeUrl : 'page/user.html',
 
                 //批量删除中被选中的id数组
                 selectedIds:[],
