--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -82,10 +82,9 @@
     margin: 0 0 0 15px;
     background-color: #606060;
     display: inline-block;">
-        红包管理平台
+        红包管理平台-{{username}}
     </p>
-
-    <el-button type="text" style="float: right;color: white;" onclick="logout()">退出</el-button>
+    <el-button type="text" style="float: right;color: white;font-weight: bold" onclick="logout()">退出</el-button>
 
 </div>
 
@@ -158,10 +157,24 @@
 
     new Vue({
         el:"#head",
+        created(){
+            if(localStorage.getItem('user') != null){
+                //获取当前登录员工的账号，并赋值给模型数据user
+                this.username = JSON.parse(localStorage.getItem('user')).name
+                console.log(this.username)
+            }
+        },
+
+        data(){
+            return{
+                username:''
+            }
+        }
     })
 
     new Vue({
         el:"#app2",
+
 
         methods:{
 
@@ -177,6 +190,7 @@
 
         data() {
             return {
+
                 activeIndex: 2,
                 activeIndex2: 2,
 
@@ -215,189 +229,7 @@
 
         },
 
-        methods: {
 
-            selectALL() {
-                //无法在axios内使用this，所以在axios外定义了一个
-                var _this = this;
-
-                //页面加载完后发送异步请求，获取数据
-                axios({
-                    method:"get",
-                    url:"/user/page",
-                    data:_this.tableUser
-                }).then(resp =>{
-                    console.log(resp)
-                })
-            },
-
-            tableRowClassName({row, rowIndex}) {
-                if (rowIndex === 1) {
-                    return 'warning-row';
-                } else if (rowIndex === 3) {
-                    return 'success-row';
-                }
-                return '';
-            },
-
-            // 复选框选中后执行的方法
-            handleSelectionChange(val) {
-                this.multipleSelection = val;
-            },
-
-            // 查询方法
-            onSubmit() {
-                this.selectALL();
-            },
-
-            // 添加数据
-            addBrand(){
-                //console.log(this.brand);
-                //发送ajax请求，添加数据
-                var _this = this;
-                axios({
-                    method: "post",
-                    url:"http://localhost:8081/brand-case/addServlet",
-                    data: _this.brandSec
-                }).then(function (response) {
-                    if (response.data == "success"){
-                        _this.selectALL();
-                        //关闭窗口
-                        _this.dialogVisible = false;
-
-                        _this.$message({
-                            message:'添加成功!',
-                            type:'success'
-                        });
-                    }else {
-                        _this.$message.error('添加失败');
-                    }
-                })
-            },
-
-            updateById(index, row) {
-                var _this = this;
-                _this.brand.id = row.id;
-                _this.addVisible = true;
-            },
-            //修改数据
-            updatebrand(){
-                var _this = this;
-                //发送ajax异步请求，添加数据
-                axios({
-                    method: "post",
-                    url: "http://localhost:8081/brand-case/updateServlet",
-                    data: _this.brandThd
-                }).then(function (resp) {
-                    if (resp.data == "success") {
-                        //关闭窗口
-                        _this.addVisible = false;
-                        //查询一次
-                        _this.selectALL();
-                        _this.$message({
-                            message: '修改成功',
-                            type: 'success'
-                        });
-                    } else {
-                        _this.$message.error('修改数据失败');
-                    }
-                })
-            },
-
-            //删除数据
-            deleteById(index, row) {
-                var _this = this;
-                this.$confirm('此操作将删除该数据, 是否继续?', '提示', {
-                    confirmButtonText: '确定',
-                    cancelButtonText: '取消',
-                    type: 'warning'
-                }).then(() => {
-                    // 发送ajax请求，添加数据
-                    axios({
-                        method: "get",
-                        url: "http://localhost:8081/brand-case/deleteServlet",
-                        data: row.id
-                    }).then(function (resp) {
-                        if (resp.data == "success") {
-                            // 重新查询数据
-                            _this.selectALL();
-                            // 弹出消息提示
-                            _this.$message({
-                                message: '删除成功',
-                                type: 'success'
-                            });
-                        }
-                    })
-                }).catch(() => {
-                    //用户点击取消按钮
-                    this.$message({
-                        type: 'info',
-                        message: '已取消删除'
-                    });
-                });
-            },
-
-
-            //批量删除的方法
-            deleteByIds(){
-                //1.创建id数组
-                for (let i = 0; i < this.multipleSelection.length; i++) {
-                    let selectionElement = this.multipleSelection[i];
-                    this.selectedIds[i] = selectionElement.id;
-                }
-                var _this = this;
-
-                _this.$confirm('该操作不可逆，是否确定要删除已选择的数据?', '警告', {
-                    confirmButtonText: '确定',
-                    cancelButtonText: '取消',
-                    type: 'warning'
-                }).then(() => {
-                    //确定
-
-                    //发送ajax请求
-                    axios({
-                        method: "post",
-                        url: "http://localhost:8081/brand-case/deleteByIdsServlet",
-                        data: _this.selectedIds
-                    }).then(function (resp) {
-                        if (resp.data == "success") {
-                            //关闭窗口
-                            _this.addVisible = false;
-                            //查询一次
-                            _this.selectALL();
-                            _this.$message({
-                                message: '删除成功',
-                                type: 'success'
-                            });
-                        } else {
-                            _this.$message.error('删除失败');
-                        }
-                    });
-                }).catch(() => {
-                    //取消
-                    _this.$message({
-                        type: 'info',
-                        message: '已取消删除'
-                    });
-                });
-
-            },
-
-            //分页
-            handleSizeChange(val) {
-                this.pageSize  = val;
-                this.selectALL();
-            },
-            handleCurrentChange(val) {
-                this.currentPage  = val;
-                this.selectALL();
-            },
-
-            handleSelect(key, keyPath) {
-                console.log(key, keyPath);
-            }
-
-        },
 
         handleOpen(key, keyPath) {
             console.log(key, keyPath);
