--- a/src/main/resources/webapp/index.html
+++ b/src/main/resources/webapp/index.html
@@ -33,7 +33,7 @@
             float: left;
             background-color: #333333;
             width: 10%;
-            height: 100%;
+            height: 97.5%;
             /*text-align: center;*/
         }
 
@@ -45,9 +45,9 @@
 
         .right {
             float: right;
-            width: 85%;
-            height: 90%;
-            margin-top: 10px;
+            width: 88%;
+            height: 97%;
+            margin-top: 0;
         }
 
         .header{
@@ -157,6 +157,7 @@
     }
 
     function logout(){
+        localStorage.removeItem('user')
         axios({
             url:'/user/logout',
             method:'post'
